# seminario-grado-2025

./: .gitignore  Readme.MD  pyproject.toml
Cuadernos/: ModeloML.ipynb
R/: 01_ETL.R  02_ELT.R  03_Model.R  04_Metricas.R
data/: adult.csv
